chore: api docs and responses
